--- a/index3.html
+++ b/index3.html
@@ -15,11 +15,12 @@
       <nav id="mainNav3" class="main-nav">
         <ul>
          
-          <li><a href="file:///C:/Users/rahim/Desktop/website.html">Home</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/featured.html">Featured</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/services.html">Services</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/invetory.html">Inventory</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/contact.html">Contact</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index.html">Home</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index2.html">Featured</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index3.html">Services</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index4.html">Inventory</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index5.html">Contact</a></li>
+		  <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index6.html">about</a></li>
         </ul>
       </nav>
     </div>
@@ -64,4 +65,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
