--- a/index6.html
+++ b/index6.html
@@ -13,11 +13,12 @@
       <button id="mobileBtn4" class="mobile-btn">☰</button>
       <nav id="mainNav4" class="main-nav">
         <ul>
-          <li><a href="file:///C:/Users/rahim/Desktop/website.html">Home</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/featured.html">Featured</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/services.html">Services</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/invetory.html">Inventory</a></li>
-          <li><a href="file:///C:/Users/rahim/Desktop/contact.html">Contact</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index.html">Home</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index2.html">Featured</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index3.html">Services</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index4.html">Inventory</a></li>
+          <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index5.html">Contact</a></li>
+		  <li><a href="https://rahimsterling669-boop.github.io/RAHIM/index6.html">about</a></li>
         </ul>
       </nav>
     </div>
@@ -59,3 +60,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
