--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h1>Find Your Next Luxury Ride</h1>
           <p>Handpicked premium vehicles — performance, comfort, and timeless design. Explore curated listings and book a private test drive.</p>
           <div class="hero-ctas">
-            <a class="btn" href="featured.html">Explore Featured</a>
+            <a class="btn" href="https://rahimsterling669-boop.github.io/RAHIM/index2.html">Explore Featured</a>
             <a class="btn btn-outline" href="contact.html">Book a Test Drive</a>
           </div>
         </div>
@@ -74,7 +74,7 @@
             <div class="card-body">
               <h4>Tesla model s plaid</h4>
               <p class="meta">Petrol · 4.4L · 5-7 seats</p>
-              <div class="card-actions"><a href="featured.html#range" class="btn btn-sm">View</a></div>
+              <div class="card-actions"><a href="https://rahimsterling669-boop.github.io/RAHIM/index2.html#range" class="btn btn-sm">View</a></div>
             
           </article>
 
@@ -83,7 +83,7 @@
             <div class="card-body">
               <h4>Range Rover Autobiography</h4>
               <p class="meta">Petrol · 4.4L · 5-7 seats</p>
-              <div class="card-actions"><a href="featured.html#range" class="btn btn-sm">View</a></div>
+              <div class="card-actions"><a href="https://rahimsterling669-boop.github.io/RAHIM/index2.html#range" class="btn btn-sm">View</a></div>
             </div>
           </article>
 
@@ -92,7 +92,7 @@
             <div class="card-body">
               <h4>Lamborghini Huracán</h4>
               <p class="meta">V10 · 610 hp · 2 seats</p>
-              <div class="card-actions"><a href="featured.html#lambo" class="btn btn-sm">View</a></div>
+              <div class="card-actions"><a href="https://rahimsterling669-boop.github.io/RAHIM/index2.html#lambo" class="btn btn-sm">View</a></div>
             </div>
           </article>
         </div>
@@ -139,6 +139,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
