--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div>
           <h2>About AutoElite</h2>
           <p>AutoElite combines expert automotive knowledge with a white-glove customer experience. Our team sources rare, high-quality vehicles and supports buyers through every step.</p>
-          <a class="btn" href="<li><a href="https://rahimsterling669-boop.github.io/RAHIM/index6.html">Learn More</a>
+          <a class="btn"  href="https://rahimsterling669-boop.github.io/RAHIM/index6.html">Learn More</a>
         </div>
         <div class="about-image"><img src="https://images.unsplash.com/photo-1525609004556-c46c7d6cf023?auto=format&fit=crop&w=1400&q=80" alt="Showroom"></div>
       </div>
@@ -139,6 +139,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
