--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
               <li>Power: 1,020 hp</li>
               <li>Condition: Certified Pre-Owned</li>
             </ul>
-            <a class="btn" href="contact.html">Book Test Drive</a>
+            <a class="btn" href="https://rahimsterling669-boop.github.io/RAHIM/index5.html">Book Test Drive</a>
           </div>
         </div>
 
@@ -59,7 +59,7 @@
               <li>Seats: 5-7 with executive package</li>
               <li>Condition: Low mileage</li>
             </ul>
-            <a class="btn" href="contact.html">Enquire</a>
+            <a class="btn" href="https://rahimsterling669-boop.github.io/RAHIM/index5.html">Enquire</a>
           </div>
         </div>
 
@@ -74,7 +74,7 @@
               <li>Transmission: 7-speed dual-clutch</li>
               <li>Condition: Excellent</li>
             </ul>
-            <a class="btn" href="contact.html">Enquire</a>
+            <a class="btn" href="https://rahimsterling669-boop.github.io/RAHIM/index5.html">Enquire</a>
           </div>
         </div>
 
@@ -93,5 +93,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
