Fix HTML structure and update links

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">Auto<span>Elite</span></a>
+      <a class="logo" href="https://rahimsterling669-boop.github.io/RAHIM/index.html">Auto<span>Elite</span></a>
       <button id="mobileBtn2" class="mobile-btn">☰</button>
       <nav id="mainNav2" class="main-nav">
         <ul>
@@ -85,7 +85,7 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-col"><h4>AutoElite</h4><p>Premium vehicles. Exceptional service.</p></div>
-      <div class="footer-col"><h4>Quick Links</h4><ul><li><a href="web.html">Home</a></li></ul></div>
+      <div class="footer-col"><h4>Quick Links</h4><ul><li><a href="https://rahimsterling669-boop.github.io/RAHIM/index.html">Home</a></li></ul></div>
       <div class="footer-col"><h4>Contact</h4><p>rahimsterling@gmail.com</p></div>
     </div>
     <div class="copyright">© <span id="year2"></span> rahim cars.</div>
@@ -93,6 +93,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
