--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,10 @@
   <title>AutoElite — Services</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style=" background-image:https://tse4.mm.bing.net/th/id/OIP.Kfhe7b2Cch18sMukkk9OCQHaEA?cb=ucfimg2ucfimg=1&rs=1&pid=ImgDetMain&o=7&rm=3;
+	background-size:cover;
+	background-repeat: no cover;
+	background-position:center;">
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">Auto<span>Elite</span></a>
@@ -65,5 +68,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
