--- a/index4.html
+++ b/index4.html
@@ -42,7 +42,7 @@
             <h4>Tesla Model S Plaid</h4>
             <p class="meta">Electric · 2022</p>
             <p class="price">$129,990</p>
-            <a href="contact.html" class="btn btn-sm">Contact</a>
+            <a href="https://rahimsterling669-boop.github.io/RAHIM/index5.html" class="btn btn-sm">Contact</a>
           </div>
 
           <div class="inv-card">
@@ -50,7 +50,7 @@
             <h4>Range Rover Autobiography</h4>
             <p class="meta">Petrol · 2020</p>
             <p class="price">$89,500</p>
-            <a href="contact.html" class="btn btn-sm">Contact</a>
+            <a href="https://rahimsterling669-boop.github.io/RAHIM/index5.html" class="btn btn-sm">Contact</a>
           </div>
 
           <div class="inv-card">
@@ -58,7 +58,7 @@
             <h4>Lamborghini Huracán</h4>
             <p class="meta">Petrol · 2019</p>
             <p class="price">$216,000</p>
-            <a href="contact.html" class="btn btn-sm">Contact</a>
+            <a href="https://rahimsterling669-boop.github.io/RAHIM/index5.html" class="btn btn-sm">Contact</a>
           </div>
         </div>
 
