--- a/index4.html
+++ b/index4.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">Auto<span>Elite</span></a>
+      <a class="logo" href="https://rahimsterling669-boop.github.io/RAHIM/index5.html">Auto<span>Elite</span></a>
       <button id="mobileBtn5" class="mobile-btn">☰</button>
       <nav id="mainNav5" class="main-nav">
         <ul>
@@ -77,4 +77,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
